2001-03-18  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrsf_frmts/dgn: removed requirement for .dgn extention.

2001-03-16  Frank Warmerdam  <warmerdam@pobox.com>

	* OGR Shapefile driver: added support for reading and writing 
	.prj files.

	* ogr/ogr_srs_esri.cpp: added support for esri .prj files with
	WKT in them.  We don't massage datum names yet though.

2001-03-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Improved ld -shared / CXX -shared testing to preserve existing
	LD_LIBRARY_PATH incase it is needed for something like the C++
	support shared library.

	* Upgraded to use install-sh so we will have reliable install
	semantics.

===============================================================================
	
2001-03-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 1.1.4 release.

	* Added dist_docs directory with distribution specific stuff.

	* Added mk_win_bin_dist.sh to build windows binary distribution.

2001-03-13  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/gtiff/geotiff.cpp: Don't try to handle all MINISWHITE
	images through RGBA interface.  Check with TIFFRGBAImageOK() before
	using RGBA interface.

2001-03-12  Frank Warmerdam  <warmerdam@pobox.com>

	* pymod/numpydataset.cpp captures and holds projection and
	geotransform.

	* Added frmts/aaigrid (ASCII Arc/Info Grid read support) at the
	request of Ben Discoe. 

2001-03-11  Simon Perkins  <simes@genie.lanl.gov>

	* Added FITS support for "byte scaled" files.

2001-03-08  Simon Perkins  <simes@genie.lanl.gov>

	* Added support for reading and	writing metadata to FITS files.
	Upon opening a FITS file, all non trivial headers are read from
	the file and stored in the metadata store. Upon closing the FITS
	file, any metadata associated with a name that is 8 characters or
	less long, is written to the FITS file. The driver attempts to
	guess the type of the metadata (double, long, logical or string)
	and calls the appropriate fits update functions.
